# Bazel-TypeScript-C-Binding-example

./: BUILD  MODULE.bazel  README.bazel.md  README.md  package.json  pnpm-lock.yaml
.aspect/cli/: config.yaml
tools/: BUILD  tools.lock.json
tools/format/: BUILD
tools/lint/: BUILD  linters.bzl
